scripts/remote-dev/remote_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-prod-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: justforfunstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-app-service
                port:
                  number: 3000
